--- a/Insper_Auto.ipynb
+++ b/Insper_Auto.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "As próximas linhas de código extrai o ID LATTES a partir da coluna em que estão os links dos currículos dos usuários, adicionando uma nova coluna ao dataframe. O mesmo é feito para o ID INSPER.\n",
     "\n",
-    "<font color=\"red\">IMPORTANTE:</font> Essa parte do código só precisa ser executada caso não tenhamos os IDs LATTES e INSPER na base de dados. Caso contrário, não há necessidade de rodar essa parte do código."
+    "<font color=\"red\">IMPORTANTE:</font> Essa parte do código só precisa ser executada caso não tenhamos os IDs LATTES e INSPER na base de dados."
    ]
   },
   {
@@ -85,12 +85,13 @@
    "outputs": [],
    "source": [
     "# Todos as variáveis dessa função são Strings, menos df, que representa um dataframe\n",
+    "service = Service()\n",
+    "options = webdriver.ChromeOptions()\n",
+    "\n",
     "def adicionar_usuario(usuario, senha, df, id_coluna_nome, id_coluna_lattes, id_coluna_insper, id_coluna_cpf):\n",
-    "    service = Service()\n",
-    "    options = webdriver.ChromeOptions()\n",
     "    navegador = webdriver.Chrome(service=service, options=options)\n",
     "\n",
-    "    navegador.get(https://cgi.insper.edu.br/PortfolioDocente/)\n",
+    "    navegador.get('https://cgi.insper.edu.br/PortfolioDocente/')\n",
     "\n",
     "    navegador.find_element('xpath', '//*[@id=\"ContentPlaceHolder1_txtLogin\"]').send_keys(usuario)\n",
     "    navegador.find_element('xpath', '//*[@id=\"ContentPlaceHolder1_txtSenha\"]').send_keys(senha)\n",
@@ -143,7 +144,7 @@
     "```python\n",
     "importar_usuario(link_site, usuario, senha, df, id_coluna_nome)\n",
     "```\n",
-    "- `usuario` (str): O seu usuário Insper.\n",
+    "- `usuario` (str): O seu usuário Insper (Provavelmente você precisará pedir acesso a um funcionário da instituição).\n",
     "- `senha` (str): A sua senha de acesso.\n",
     "- `df` (pandas DataFrame): O DataFrame onde as informações do usuário estão armazenadas.\n",
     "- `id_coluna_nome` (str): O nome da coluna onde estão os nomes dos usuários a serem cadastrados."
@@ -156,12 +157,13 @@
    "outputs": [],
    "source": [
     "# Todos as variáveis dessa função são Strings, menos df, que representa um dataframe\n",
+    "service = Service()\n",
+    "options = webdriver.ChromeOptions()\n",
+    "\n",
     "def importar_usuario(usuario, senha, df, id_coluna_nome):\n",
-    "    service = Service()\n",
-    "    options = webdriver.ChromeOptions()\n",
     "    navegador = webdriver.Chrome(service=service, options=options)\n",
     "\n",
-    "    navegador.get(https://cgi.insper.edu.br/PortfolioDocente/)\n",
+    "    navegador.get('https://cgi.insper.edu.br/PortfolioDocente/')\n",
     "\n",
     "    navegador.find_element('xpath', '//*[@id=\"ContentPlaceHolder1_txtLogin\"]').send_keys(usuario)\n",
     "    navegador.find_element('xpath', '//*[@id=\"ContentPlaceHolder1_txtSenha\"]').send_keys(senha)\n",
