--- a/Insper_Auto.ipynb
+++ b/Insper_Auto.ipynb
@@ -85,10 +85,12 @@
    "outputs": [],
    "source": [
     "# Todos as variáveis dessa função são Strings, menos df, que representa um dataframe\n",
-    "service = Service()\n",
+    "service = Service(ChromeDriverManager().install())\n",
     "options = webdriver.ChromeOptions()\n",
     "\n",
     "def adicionar_usuario(usuario, senha, df, id_coluna_nome, id_coluna_lattes, id_coluna_insper, id_coluna_cpf):\n",
+    "    # Caso queira que o navegador não abra, basta descomentar a linha abaixo\n",
+    "    # options.add_argument('--headless')\n",
     "    navegador = webdriver.Chrome(service=service, options=options)\n",
     "\n",
     "    navegador.get('https://cgi.insper.edu.br/PortfolioDocente/')\n",
@@ -157,10 +159,12 @@
    "outputs": [],
    "source": [
     "# Todos as variáveis dessa função são Strings, menos df, que representa um dataframe\n",
-    "service = Service()\n",
+    "service = Service(ChromeDriverManager().install())\n",
     "options = webdriver.ChromeOptions()\n",
     "\n",
     "def importar_usuario(usuario, senha, df, id_coluna_nome):\n",
+    "    # Caso queira que o navegador não abra, basta descomentar a linha abaixo\n",
+    "    # options.add_argument('--headless')\n",
     "    navegador = webdriver.Chrome(service=service, options=options)\n",
     "\n",
     "    navegador.get('https://cgi.insper.edu.br/PortfolioDocente/')\n",
