--- a/Lattes_Auto_Nan.ipynb
+++ b/Lattes_Auto_Nan.ipynb
@@ -56,9 +56,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "service = Service()\n",
+    "service = Service(ChromeDriverManager().install())\n",
     "options = webdriver.ChromeOptions()\n",
+    "\n",
     "def lattes_nan(df, id_coluna_nome,id_coluna_lattes):\n",
+    "    # Caso queira que o navegador não abra, basta descomentar a linha abaixo\n",
+    "    # options.add_argument('--headless')\n",
     "    for i in range(0, len(df)):\n",
     "        navegador = webdriver.Chrome(service=service, options=options)\n",
     "        navegador.get('https://buscatextual.cnpq.br/buscatextual/busca.do?metodo=apresentar')\n",
